2006-02-01 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to emails sent by cron task to admin.
	* Add file locking to dmailer cron script so that the dmailer cron never runs twice (bugtracker issue 2461).
	* Correct query for the fe_users case in makeStaticListQuery.
	* Comment out call to undefined getRecursiveSelect in funtion cmd_compileMailGroup
	
2006-01-31 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add deleted column to sys_dmail table (bugtracker issue 2190).
	* Remove message-id setting from dmailer class. Use updated version of core t3lib_htmlmail.
	* Add email column to sys_dmail_maillog (bugtracker issue 2191).

2006-01-30 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Adjust default value of proposed messageid.

2006-01-29 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* ext_tables.php: add module_sys_dmail_category and module_sys_dmail_html to all types in fe_users TCA
	* Add option to use sendmail deferred delivery mode.
	* Remove from class.dmailer.php redundant functions now corrected in TYPO3 4.0 core.
	* Try to auto-detect charset when page is external.
	* Fix issue 611 (add real name in To: field of emails).

2006-01-28 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Fix problem when sending the final mail to a simple list.
	* Add dmail boundaries wrapper class and typoscript (on behalf of Thorsten Kahler).
	* Use $TYPO3_DB->fullQuoteStr in makeStaticListQuery.

2006-01-25 Jan-Erik Revsbech <jer@moccmpany.com>
	* fixed som e serious bugs concerning the migration from categories is TSconfig to the db table sys_dmail_categories. Now single content elements can be modified so its only displayed if the user is subscribing to the specifed category. Requires a pending patch in tslib/class.tslib_content.php
	* fixed problem with editing subscription profile for tt_address and fe_users records.
	
2006-01-25 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>